--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -36,7 +36,8 @@
 
 
 				<section id="espacio_sup">
-                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <p  id="navText" style="font-size: 17px">El Kfetal Cafeteria<br>Tel. 67-96-15-94</p>
+                    <a href="inicio.html" class="btnAdmin">|o|</a>
                     </section>
 
 
@@ -70,7 +71,7 @@
 		</table>
 		</div>
 
-		<div id = "form_reservacion">
+		<div id = "form_reservacion" style="padding-top:0px">
 			<div class ="contact_form">
 
 				<span>Nombre</span>
@@ -93,10 +94,10 @@
 				<br>
 				<input type="time" id="hora_llegada"  required>
 				<br>
-				<span>Hora de salida</span>
+				<!--span>Hora de salida</span>
 				<br>
 				<input type="time" id="hora_salida"  required>
-				<br>
+				<br-->
 				<span>No. de personas</span>
 				<br>
 				<input type="number" id="n_personas" placeholder="4" required>
@@ -111,8 +112,8 @@
 		</div>
 		<footer>
         <span id="foot">
-            <p  id="footText">El Kfetal Cafeteria<br>
-                Tel. 67-96-15-94</p>
+            <p  id="footText" style="font-size: 10px">Realizado por la Facultad de Ciencias, UNAM<br>
+                Todos los derecho reservados.</p>
         </span>
     </footer>
 	</body>
