--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -64,7 +64,8 @@
                 <div id="navegacion">
 
                     <section id="espacio_sup">
-                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <p  id="navText" style="font-size: 17px">El Kfetal Cafeteria<br>Tel. 67-96-15-94</p>
+                    <a href="inicio.html" class="btnAdmin">|o|</a>
                     </section>
                     <nav id='cssmenu'>
                         <ul>
@@ -100,6 +101,7 @@
                     <div class="fluid_container" id="cambio">
                         
                         <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
+                            
                             <div data-thumb="../images/menu/cafe/cafe_prew/cafe01.jpg" data-src="../images/menu/cafe/cafe01.jpg">
 
                             </div>
@@ -126,8 +128,8 @@
         </div>
         <footer>
         <span id="foot">
-            <p  id="footText">El Kfetal Cafeteria<br>
-                Tel. 67-96-15-94</p>
+            <p  id="footText" style="font-size: 10px">Realizado por la Facultad de Ciencias, UNAM<br>
+                Todos los derecho reservados.</p>
         </span>
     </footer>
     </body>
