--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -28,7 +28,8 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <p  id="navText" style="font-size: 17px">El Kfetal Cafeteria<br>Tel. 67-96-15-94</p>
+                    <a href="inicio.html" class="btnAdmin">|o|</a>
                     </section>
                 <nav id='cssmenu'>
                     <ul>
@@ -47,7 +48,7 @@
         <h1 style="color : black; margin-left: 5px">Nuesta Historia</h1>
         <div class = "contenido" id="info">
         El Kfetal nace en el año 2014 como un proyecto de negocio de Angélica y Arturo. Siendo amantes del café y acostumbrados a tomar una buena taza por las mañanas para iniciar el día, vieron la oportunidad de abrir el negocio pensando en el gusto de las personas que como ellos, inician su jornada laboral muy temprano. <br><br>
-        Por el rumbo no existía ninguna opción para poder tomar un buen café o comprar un alimentosano y completo a esa hora (06:30 am, horario en el que el Kfetal abre sus puertas) a precios accesibles y con excelente calidad y pensando en cualquier tipo de presupuesto. En el mes de enero comenzaron los preparativos para buscar las herramientas para formar una cafetería que aunque chiquita, lleva un gran pedazo de esfuerzo y corazón impresos en todo lo que se ofrece y se hace para satisfacer el gusto de todos sus clientes.
+        Por el rumbo no existía ninguna opción para poder tomar un buen café o comprar un alimento sano y completo a esa hora (06:30 am, horario en el que el Kfetal abre sus puertas) a precios accesibles y con excelente calidad y pensando en cualquier tipo de presupuesto. En el mes de enero comenzaron los preparativos para buscar las herramientas para formar una cafetería que aunque chiquita, lleva un gran pedazo de esfuerzo y corazón impresos en todo lo que se ofrece y se hace para satisfacer el gusto de todos sus clientes.
         Su lema, <big><b>“NO SERVIR NADA QUE ELLOS NO COMERÍAN”</b></big><br><br>
         A punto de cumplir un año de apertura, los clientes que los frecuentan y los que apenas comienzan su gusto por visitarlos han hecho de “el Kfetal” un lugar de buena vibra, donde encontrarán productos de alta calidad y buenos precios, además de una sonrisa por parte de sus anfitriones. <br><br><br>
         <big><b>Visión:</b></big> <br><br>
@@ -72,8 +73,8 @@
     </div>
     <footer>
         <span id="foot">
-            <p  id="footText">El Kfetal Cafeteria<br>
-                Tel. 67-96-15-94</p>
+            <p  id="footText" style="font-size: 10px">Realizado por la Facultad de Ciencias, UNAM<br>
+                Todos los derecho reservados.</p>
         </span>
     </footer>
 
