--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -23,7 +23,8 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                    <a href="inicio.html" class="btnAdmin">|o|<br> m </a>
+                    <p  id="navText" style="font-size: 17px">El Kfetal Cafeteria<br>Tel. 67-96-15-94</p>
+                    <a href="inicio.html" class="btnAdmin">|o|</a>
                     </section>
                 <nav id='cssmenu'>
                     <ul>
@@ -71,8 +72,8 @@
 
 <footer>
         <span id="foot">
-            <p  id="footText">El Kfetal Cafeteria<br>
-                Tel. 67-96-15-94</p>
+            <p  id="footText" style="font-size: 10px">Realizado por la Facultad de Ciencias, UNAM<br>
+                Todos los derecho reservados.</p>
         </span>
     </footer>
 
