--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 
 				<section id="espacio_sup">
                     <p  id="navText" style="font-size: 17px">El Kfetal Cafeteria<br>Tel. 67-96-15-94</p>
-                    <a href="inicio.html" class="btnAdmin">|o|</a>
+                    <a href="src/html/inicio.html" class="btnAdmin">|o|</a>
                     </section>
 
 
