--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -98,7 +98,7 @@
                </div>
             <div class="contenido" id="galeria_menu">
                 <div style="width:100%">
-                    <div class="fluid_container" id="cambio">
+                    <!--div class="fluid_container" id="cambio">
 
                         <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
 
@@ -115,7 +115,8 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div-->
+                    <img src="../images/menu/cafe/cafe01.jpg" alt="cafe" id="image_menu">
                 </div>
             </div>
             <div class="contenido" id="descripcion_menu">
