--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -125,7 +125,7 @@
 				<span>No. de personas</span>
 				<br>
 				<select  id = "personas">
-  				<option value="1 - 4" >1 - 4</option>
+  				<option >1 - 4</option>
   				<option > 4 -8</option>
 				</select>
 
