--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="src/css/estilo_home.css">
 	<link rel="stylesheet" href="src/css/estilo_nav.css">
 	<link rel="stylesheet" href="src/css/estilo_html.css">
+	<script type='text/javascript' src='src/js/jquery-2.1.3.min.js'></script>
+	<script type='text/javascript' src='src/js/script.js'></script>
+	<script type='text/javascript' src='src/js/script1.js'></script>
 	<script type="text/javascript" src="src/js/woopra.js"  ></script>
 	<script  type="text/javascript" src="src/js/replace.js"> </script>
 	<script  type="text/javascript" src="src/js/nowait.js"></script>
@@ -17,9 +20,7 @@
     	<script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
     	<script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
     	<script type='text/javascript' src='src/js/camera.min.js'></script>
-    	<script type='text/javascript' src='src/js/script1.js'></script>
-    	<script type='text/javascript' src='src/js/script.js'></script>
-    	<script type='text/javascript' src='src/js/llenaCubo.js'></script>
+	<script type='text/javascript' src='src/js/llenaCubo.js'></script>
 
     <style>
 
