--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -4,17 +4,16 @@
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
-	<!--link rel="stylesheet" href="../css/estilo1.css"-->
 	<link rel="stylesheet" href="../css/estilo_nav.css">
-    <link rel="stylesheet" href="../css/estilo_html.css">
+	<link rel="stylesheet" href="../css/estilo_html.css">
 	<link rel="stylesheet" href="../css/estilo_agenda_reservacion.css">
-
+	<script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
+    	<script type='text/javascript' src='../js/script_menu.js'></script>
+    	<script type='text/javascript' src='../js/script.js'></script>
+    	<script type='text/javascript' src='../js/script1.js'></script>
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
-	<script type='text/javascript' src='../js/script.js'></script>
-	<script type='text/javascript' src='../js/script1.js'></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="../js/jquery.min.js"></script>
+    	<script type="text/javascript" src="../js/jquery-ui.min.js"></script>
 
  	<script src= "../js/moverMesa.js"></script>
 	<style>
