--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -4,15 +4,13 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>El Kfetal®</title>
-
-	<!--link rel="stylesheet" href="../css/estilo1.css"-->
-    <link rel="stylesheet" href="../css/estilo_nav.css">
-    <link rel="stylesheet" href="../css/estilo_html.css">
-    <link rel="stylesheet" href="../css/estilo_contacto.css">
-    <!--link rel="stylesheet" type="text/css" href="../css/miCss.css"-->
-    <script type='text/javascript' src='../js/jquery.min.js'></script>
-    <script type='text/javascript' src='../js/script1.js'></script>
-    <script type="text/javascript" src="../js/script.js"></script>
+        <link rel="stylesheet" href="../css/estilo_nav.css">
+        <link rel="stylesheet" href="../css/estilo_html.css">
+        <link rel="stylesheet" href="../css/estilo_contacto.css">
+        <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
+        <script type='text/javascript' src='../js/script.js'></script>
+        <script type='text/javascript' src='../js/script1.js'></script>
+        <script type='text/javascript' src='../js/jquery.min.js'></script>
 
 </head>
 
