--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" href="../css/estilo_nav.css">
     <link rel="stylesheet" href="../css/estilo_html.css">
 	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
-	<!--link rel="stylesheet" href="../css/estilos1.css"-->
+	<script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
+    	<script type='text/javascript' src='../js/script.js'></script>
+    	<script type='text/javascript' src='../js/script1.js'></script>
 	<script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
-    <script type='text/javascript' src='../js/jquery.min.js'></script>
-    <script type='text/javascript' src='../js/script1.js'></script>
+    	<script type='text/javascript' src='../js/jquery.min.js'></script>
+
 
 	</head>
 <body>
