--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>El Kfetal®</title>
-    <!--link rel="stylesheet" href="../css/estilo1.css"-->
     <link rel="stylesheet" href="../css/estilo_nav.css">
     <link rel="stylesheet" href="../css/estilo_html.css">
     <link rel="stylesheet" href="../css/estilo_inicio.css">
-    <script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
+    <script type='text/javascript' src='../js/script.js'></script>
     <script type='text/javascript' src='../js/script1.js'></script>
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+
     <script src="../js/script.js"></script>
 
 </head>
