--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -6,6 +6,7 @@
     <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script_menu.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
     <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
     <link rel="stylesheet" href="../css/estilo_nav.css">
     <link rel="stylesheet" href="../css/estilo_html.css">
