--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 
-	<!--link rel="stylesheet" href="../css/estilo1.css"-->
+
     <link rel="stylesheet" href="../css/estilo_nav.css">
     <link rel="stylesheet" href="../css/estilo_html.css">
     <link rel="stylesheet" href="../css/estilo_nosotros.css">
-    <!--link rel="stylesheet" type="text/css" href="../css/miCss.css"-->
-    <script type='text/javascript' src='../js/jquery.min.js'></script>
-    <script type='text/javascript' src='../js/script1.js'></script>
+   <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+
 
 </head>
 
