--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -26,7 +26,7 @@
 			<div id="menu">
 
 				<div id="logo">
-					<img src="../images/Logo2.jpg" id="logoNav">
+					<a href="../../home.html"><img src="../images/Logo2.jpg" id="logoNav"></a>
 				</div>
 
 				<div id="navegacion">
